# discord-conversation-synthesizer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh  test_runner.py
config/: config.yaml
config/prompts/: synthesis.md
src/: __init__.py  __main__.py  config.py  exporter.py  fetcher.py  links.py  models.py  open_questions.py  profiles.py  segmenter.py  stats.py  synthesizer.py  timeline.py
src/mocks/: __init__.py  claude_mock.py  discord_mock.py
tests/fixtures/: sample_conversations.json
